@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> AGV" {
    entity AGV
    class AGVStatus
    class AGVPosition
    class AGVId
}

entity AGV <<entity>> <<root>> {
    -state
}

entity AGV <<entity>> <<root>> {}


class AGVPosition <<(V,#FF8B40) value object>> {
-agvPosition
}

class AGVStatus<<(V,#FF8B40) value object>> {
    -taskState
}

class AGVId <<(V,#FF8B40) value object>> {
-id
}

AGV --> "1" AGVId : has
AGV --> "1..*" AGVStatus : collects

AGV --> "1" AGVPosition : located in
@enduml